feat: update some ui style

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">What is BASED?</h2>
-                        <p class="text-white-50">
+                        <p class="text-white-50-mb-0">
                             Based On Tap (BOT) is a dynamic community of brazen pioneers within the TAP/Ordinals space where innovation, collaboration, and cutting-edge technology converge. Built on the foundation of creativity and shared purpose, BOT brings together builders, artists, intellectuals, entrepreneurs, and investors to drive positive change within the tap ecosystem and beyond.
-                        </br>Want to become a member of our community? Enter your details using the link below: </br><a class="btn btn-outline-danger" href="https://forms.gle/9kNw7jtdSermxTqXA">MEMBERSHIP APPLICATION</a>
                         </p>
+                    </br>
+                        <p class="text-white-50">Want to become a member of our community? Enter your details using the link below: </br></br><a class="btn btn-outline-danger" href="https://forms.gle/9kNw7jtdSermxTqXA">MEMBERSHIP APPLICATION</a></p>
                     </div>
                 </div>
             </div>
@@ -66,6 +67,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://twitter.com/BasedOnTap"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="https://docs.basedontap.com"><img src="./assets/img/gitbook-icon.png" alt="..." width="16"/></a>
                     <!-- <a class="mx-2" href="#!"><i class="fab fa-discord"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                     -->
