feat: Update the color of the GitBook icon and enhance the hover effect to change the icon's color on interaction.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://twitter.com/BasedOnTap"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="https://docs.basedontap.com"><img src="./assets/img/gitbook-icon.png" alt="..." width="16"/></a>
+                    <a class="mx-2" href="https://docs.basedontap.com"><img id="git-book-icon" src="./assets/img/gitbook-icon.svg" alt="..." width="16"/></a>
                     <!-- <a class="mx-2" href="#!"><i class="fab fa-discord"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                     -->
